client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: subscriptions-ri
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: argonautcontainerregistry.azurecr.io/subscriptions/client:latest
        ports:
        - containerPort: 56340
