ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: subscriptions-ri
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: argonautcontainerregistry.azurecr.io/subscriptions/ui:latest
        ports:
        - containerPort: 80
