client.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: client
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 56345
