server-proxy.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: server-proxy
spec:
  selector:
    app: server-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 56340
