ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ui
spec:
  selector:
    app: ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
