simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: subscriptions-ingress
  namespace: subscriptions-ri
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - argo-subscriptions.eastus.cloudapp.azure.com
    - subscriptions.argo.run
    - server.subscriptions.argo.run
    - client.subscriptions.argo.run
    - ui.subscriptions.argo.run
    secretName: tls-secret
  rules:
  - host: ui.subscriptions.argo.run
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
        path: /(.*)
  - host: subscriptions.argo.run
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
        path: /(.*)
  - host: server.subscriptions.argo.run
    http:
      paths:
      - backend:
          serviceName: server-proxy
          servicePort: 80
        path: /(.*)
